@@ -13,15 +13,16 @@ Changes in progress
 - xtec-booking: Role teacher can no longer edit posts edited by admins or editors, but can still edit bookings (Trello #1421)
 - Theme reactor: Deleted duplicated favicon (Trello #1419)
 - xtec-ldap-login: Don't send e-mail when user password is updated
+- agora-functions: Moved Automatic creation of featured image (Imatge resum) from mu-common to agora-functions (Trello #1284)
 
 
 Changes 16.10.24
 ---------------------------------------------------------------------------------------
 - GCE: Prevent grouped calendars to belong to categories used to create that calendars (Trello #1371)
-- CGE: Fixed grouped calendars not showing in dropdown menu in customizer (Trello #1384)
+- GCE: Fixed grouped calendars not showing in dropdown menu in customizer (Trello #1384)
 - Dashboard: Reviewed access to menu options in dashboard for roles xtec_teacher and contributor (Trello #1354)
 - wordpress-importer: Upgraded plugin from 0.6.1 to 0.6.3
-- agora-functions: agora-functions: Translated text to english and added translation to .po file (Trello #1394)
+- agora-functions: Translated text to english and added translation to .po file (Trello #1394)
 - mu-common: Allow more attributes in embed tag in visual editor (Trello #1297)
 - mu-common: Fixed default comment status. Restored default action about comment status parameter (Trello #1365)
 - mu-common: Added Automatic creation of featured image (Imatge resum) (Trello #1284)
